feat: rewrite MCP layer for Spring AI 1.x
McpTool -> Tool annotations (tool names kept as nexus_* to preserve the
MCP contract), McpSyncRequestContext replaced by ThreadLocal user context
(McpUserContextHolder) populated by a new McpApiKeyFilter at the HTTP
layer (1.x has no transport-level security validator). Resources and
prompts registered as SyncResourceTemplateSpecification /
SyncPromptSpecification beans. Explicit ToolCallbackProvider (@Lazy to
break the chatClient cycle). Tests adapted to holder-based auth.